set table header fix for readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,3 +66,9 @@ footer {
 .team-stopped {
   background-color: red;
 }
+
+.div-table-content {
+  height: 70vh;
+  overflow-y:auto;
+}
+
